# ai-voice-assistant

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: backend.yml  mobile.yml
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/clarin/: client.py  llm_query.py  transcription.py
apps/backend/app/openai/: __init__.py  client.py  gpt.py  whisper.py
apps/backend/app/sound_processing/: remove_silence.py
apps/mobile/: .dockerignore  .env.example  .eslintrc.js  .prettierrc.yml  Dockerfile  app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/mobile/api/sendAudioFile/mobile/: sendAudioFile.ts
apps/mobile/api/sendAudioFile/web/: sendAudioFile.ts
apps/mobile/app/: _layout.tsx
apps/mobile/assets/: loading.json  recording.json  speaking-animation.json
apps/mobile/components/: main-button.tsx
apps/mobile/components/Assistant/: Assistant.tsx  index.ts  styles.ts
apps/mobile/components/LoadingBox/: LoadingBox.tsx  types.ts
apps/mobile/components/MainButton/: MainButton.tsx  styles.ts  types.ts
apps/mobile/components/MessageBox/: MessageBox.tsx  types.ts
apps/mobile/components/Settings/: Settings.tsx  styles.ts  types.ts
apps/mobile/components/Settings/RadioButtons/: RadioButtons.tsx  styles.ts  types.ts
apps/mobile/components/Settings/SettingsIcon/: SettingsIcon.tsx  index.ts
apps/mobile/components/Settings/SettingsModal/: SettingsModal.tsx  (+2 more)
apps/mobile/hooks/: useFetch.ts  useRecord.ts  useSentenceQueue.ts  useWebSocket.ts  useWebsocket.ts
apps/mobile/hooks/cross/: useSentenceQueue.ts
apps/mobile/hooks/web/: useRecord.ts
apps/mobile/types/: OpenAI.ts  models.ts
(+10 files in other folders)
