[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Krystian Ogonowski <krystian@ogonowski.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
websockets = "^12.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
